詳細ページの実装 restaurantsテーブルに電話番号カラムも追加。ログイン認証のコンストラクタ追加。各モデルにリレーション記述追加。詳細表示ページの作成を行った。

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,3 +121,10 @@
 .user-name:hover .logout-text {
     display: block;
 }
+
+/* 地図とGoogleマップの画像サイズを統一 */
+.image-map-size {
+    width: 400px;
+    height: 400px;
+}
+
